# solvers

./: .gitignore  README.md  bitbucket-pipelines.yml  env_solvers.yml  license  requirements.txt  setup.cfg  tox.ini
.github/workflows/: workflow.yml
docs/: bibliography.bib
solvers/: CDM.py  HHT_solver.py  base_solver.py  bathe_solver.py  central_difference_solver.py  newmark_ognibene.py  newmark_solver.py  sparse.py  static_solver.py  utils.py  zhai_solver.py
tests/: test_CDM.py  test_bathe_solver.py  test_central_difference_solver.py  test_consistent.py  test_newmark_solver.py  test_ognibene.py  test_solver.py  test_static_solver.py  test_zhai_solver.py  utils.py
tests/aux_code/: bathe_solver.py
