[metadata]
name = solvers
version = 0.1
authors = Bruno Zuada Coelho, Aron Noordam
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = Numerical solvers
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7