[metadata]
name = solvers
version = 0.3
authors = Bruno Zuada Coelho, Aron Noordam
author_email = bruno.zuadacoelho@deltares.nl, aron.noordam@deltares.nl
description = Numerical solvers
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = solvers
install_requires =
    numpy>=1.18.1
    scipy>=1.4.1
    tqdm>=4.46.0
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24